--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stdout-test",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Language-agnostic test tool that checks a process's stdout output",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
