--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "stdout-test",
   "version": "0.0.1",
   "description": "Language-agnostic test tool that checks a process's stdout output",
-  "main": "index.js",
+  "repository": "git@github.com:andyfischer/stdout-test.git",
+  "main": "bin/stdout-test",
   "scripts": {
     "build": "tsc -p .",
     "test": "bin/stdout-test",
